# actions-container

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: CHANGELOG.md  build-dual-image-kaniko.yml  build-image-docker.yml  build-image-kaniko.yml  check.yaml  clean.yml  commitizen.yml  merge-manifests.yml  mirror.yaml  self-pr-cleanup.yml  self.yml
test-build/: Dockerfile
