[tool.poetry]
name = "actions-container"
description = "GitHub Actions Workflows for containers"
version = "3.7.4"
authors = ["BlindfoldedSurgery <team@blindfolded.surgery>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
commitizen = "^3.12.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
version_provider = "poetry"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
