[project]
name = "actions-container"
description = "GitHub Actions Workflows for containers"
version = "4.1.0"
authors = [
    { email = "team@blindfolded.surgery", name = "BlindfoldedSurgery" }
]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]
readme = "README.md"
requires-python = "==3.13.*"

dependencies = [
    "commitizen ==4.1.0",
    "pre-commit >=4.0.0, <5.0.0",
]

[tool.uv]
package = false

[tool.commitizen]
version_provider = "pep621"
version_scheme = "semver"
tag_format = "v$major.$minor.$patch"
changelog_incremental = true
update_changelog_on_bump = true
